testing/Travis/testcases/prototype/shouldSucceed/CPLbug1.adl
CONTEXT CPLbug1 IN DUTCH

r[A*A] [PROP]
r[B*A]

POPULATION r[B*A] CONTAINS [ ( "aap", "noot" ) ]

ENDCONTEXT